click to copy output values

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+  <meta name="theme-color" content="#1a202c" />
+  <title>Producer Calc</title>
 </head>
 <body class="bg-gray-900">
-  <div class="rounded-lg container mx-auto bg-indigo-800" id="app"></div>
+  <div class="rounded-lg container mx-auto bg-indigo-800" id="app">
+      <noscript>To run this application, JavaScript is required to be enabled.</noscript>
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 </html>
