new gh-pages build

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/producer-calc/favicon.ico" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#1a202c" />
   <title>Producer Calc</title>
-<script type="module" crossorigin src="/assets/index.09f2b9e4.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.14da3f7e.js">
-  <link rel="stylesheet" href="/assets/index.01af42f6.css">
+<script type="module" crossorigin src="/producer-calc/assets/index.424efc2d.js"></script>
+  <link rel="modulepreload" href="/producer-calc/assets/vendor.14da3f7e.js">
+  <link rel="stylesheet" href="/producer-calc/assets/index.01af42f6.css">
 </head>
 <body class="bg-gray-900">
   <div class="rounded-lg container mx-auto bg-indigo-800" id="app">
